feat: implement the deploy logic
